========================
0.0.70
========================

- `schema.action()` supports a link to the JSON schema declaration
- fixed making insecure HTTPS requests by [DJTripper](https://github.com/DJTripper)

========================
0.0.69
========================

- fixed `input` filter in the Schema actions
- added `API().debug()` method for quick printing data
- added `API().audit()` method
- added `RESTBuilder().debug()` method for quick printing data
- added `CALL().debug()` method for quick printing data
- improved checking SVG during uploading
- updated `opt.files` by adding downloading files from URL address in the `REQUEST()` method
- updated `RESTBuilder.file(name, filename, [buffer/url])` method
- fixed `Object` type without properties in JSON schemas
- fixed built-in `session` mechanism (a problem with storing sessionid/userid with the dash `-`)
- fixed streaming videos in the debug mode
- improved HTML Parser

========================
0.0.68
========================

- fixed sending files via `REQUEST()` method (a problem with the buffer)
- added `$.variables(str, [data])` method
	- `str` supports dynamic arguments in the form `{user.key}, {model.key}, {data.key}, {params.key} or {query.key}`
- added QueryBuilder by adding `QueryBuilder.audit($, [message], [type])` method
	- `message` supports dynamic arguments in the form `{user.key}, {model.key}, {data.key}, {params.key} or {query.key}`
- added `CONF.root` as an alias for `CONF.default_root`
- fixed uploading files
- fixed parsing dates with `yy`

========================
0.0.67
========================

- improved `encoding` in the `FlowStreamMessage.variables(str, [data], [encoding])` method (it can be a `function(val, key)`)
- improved `encode` argument in `String.args()` - now it can be a `function(val, key)`
- improved error handling in JSON Schemas
- fixed routing
- added `CALL(schema, model, [controller])` method
- added `schema.action([name], options)` method
- fixed error handling in `API`