@@ -4,6 +4,7 @@
 
 - `schema.action()` supports a link to the JSON schema declaration
 - fixed making insecure HTTPS requests by [DJTripper](https://github.com/DJTripper)
+- fixed `RESTBuilder.insecure()` method
 
 ========================
 0.0.69
